--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>New web</h1>
+    <h1>New web heloo</h1>
+    <h2>2nd line</h2>
 </body>
 </html>
