--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>New web heloo</h1>
     <h2>2nd line</h2>
+
+    <input type="text">
+    <br>
+    <button>click me</button>
 </body>
 </html>
